@@ -86,6 +86,7 @@ showing the callers of each function.
 .It Fl R Ar root
 The function to use as root function. The default is "main". If set to a
 name, that cannot be found in the file, all functions are printed.
+.El
 .Sh EXAMPLES
 TODO
 .Sh EXIT STATUS
